Fix z-index issue in class edit menu.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,3 +1,7 @@
+.itemcontrol {
+  z-index: 1;
+}
+
 .sheet-character-sheet {
   .sheet-column-layout {
     display: grid;
